--- a/src/css/style.css
+++ b/src/css/style.css
@@ -1,3 +1,7 @@
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+
 * {
     box-sizing: border-box;
 }
@@ -15,7 +19,7 @@ main {
     display: flex;
     align-items: center;
     height: 65px;
-    background: linear-gradient(90deg, #672280 1.18%, #A626D3 100%);
+    background: linear-gradient(90deg, #672280 1.18%, #a626d3 100%);
     color: white;
     padding: 20px;
 }
@@ -44,7 +48,7 @@ main {
 .form--input {
     font-family: "Karla", sans-serif;
     border-radius: 5px;
-    border: 1px solid #D5D4D8;
+    border: 1px solid #d5d4d8;
     text-indent: 5px;
 }
 
@@ -52,7 +56,7 @@ main {
     grid-column: 1 / -1;
     font-family: "Karla", sans-serif;
     border-radius: 5px;
-    background: linear-gradient(90.41deg, #711F8D 1.14%, #A818DA 100%);
+    background: linear-gradient(90.41deg, #711f8d 1.14%, #a818da 100%);
     color: white;
     border: none;
     cursor: pointer;
